trunk/Archive2/70/2444e542fb9da3/output
main.cpp:2:13: error: character too large for enclosing character literal type
wchar_t t = 'ਅ';
            ^
1 error generated.
